# Chip8mulator

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/emulator/: Iemulator.hpp  chip8mulator.cpp  chip8mulator.hpp
src/emulator/cpu/: operations.hpp  registers.hpp
tests/: CMakeLists.txt  test_main.cpp
